initial test specs TODO consider further test specs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
+bcrypt==4.0.1
+blinker==1.5
 click==8.0.1
 Flask==2.0.1
+Flask-Bcrypt==1.0.1
+Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+importlib-metadata==6.0.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
+python-http-client==3.3.7
+sendgrid==6.9.7
 SQLAlchemy==1.4.18
+starkbank-ecdsa==2.2.0
 Werkzeug==2.0.1
-Flask-DebugToolbar==0.11.0
-bcrypt==4.0.1
-flask-bcrypt
-sendgrid
+zipp==3.11.0
