--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Babel==2.11.0
 bcrypt==4.0.1
 blinker==1.5
 click==8.0.1
@@ -12,6 +13,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
 python-http-client==3.3.7
+pytz==2022.7.1
 sendgrid==6.9.7
 SQLAlchemy==1.4.18
 starkbank-ecdsa==2.2.0
